controllers finnished